[workspace]
members = ["contracts/*"]

[profile.release.package.basic]
codegen-units = 1
incremental = false

[profile.release.package.atomic-swap]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false