[package]
name = "atomic-swap"
version = "0.14.2"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>"]
edition = "2018"
description = "Implementation of Atomic Swaps"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-tokens"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "1.0.1"
cw2 = "1.1.0"
cw20 = "1.1.0"
cosmwasm-schema = "1.1.5"
cosmwasm-std = "1.1.5"
cw-storage-plus = "1.1.0"
thiserror = "1.0.31"
hex = "0.3.2"
sha2 = "0.8.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw20-base = { version = "1.1.0", features = ["library"] }
semver = "1"

[dev-dependencies]